# ez_iot_os

./: .gitignore  Kconfig  LICENSE  README.md  build.sh  build_ut.sh
app/eziotlink/: CMakeLists.txt  ToolChain.cmake  device_reg_demo.cpp  ezDevSDK_boot.c  ezDevSDK_boot.h  ezDevSDK_config.c  ezDevSDK_config.h  ez_sdk_api.c  ez_sdk_api.h  ezdevice_config.ini  inireader.cpp  inireader.h
app/eziotlink/fileDepens/: dev_info
app/eziotlink/inc/: ez_sdk_api.h
app/eziotlink/src/: CMakeLists.txt  ez_sdk_api.c  ez_sdk_config.c  ez_sdk_config.h
app/reg_sample/: CMakeLists.txt  device_reg_sample.cpp  inireader.cpp  inireader.h
app/reg_sample/fileDepens/: dev_info
app/sample/: CMakeLists.txt  ToolChain.cmake  main_sample.cpp
app/sample/config/: config.ini
app/sample/extensions/base/: base_sample.c  base_sample.h
app/sample/extensions/model/: WaterPurifier_profile.json  model_sample.cpp  model_sample.h
app/sample/extensions/ota/: ota_sample.c  ota_sample.h
app/sample/utility/: inireader.cpp  inireader.h
components/logger/src/: CMakeLists.txt  elog.c  elog.h  elog_file.c  elog_file_port.c  elog_port.c  ez_sdk_log.c
components/src/: CMakeLists.txt
components/src/http/webclient/: define.h  webclient.h
components/src/json/: bscJSON.h
components/src/logger/: elog.h  elog_async.c  elog_file_cfg.h  elog_file_port.c  ez_sdk_log.h
components/src/mbedtls/: aesni.c  arc4.c  asn1parse.c  bignum.c  blowfish.c  blowfish.h  camellia.h  ccm.c  ctr_drbg.c  ecdsa.h  ecp_curves.c  entropy_poll.c  error.c  gcm.h  havege.h  md.h  md5.h  md_wrap.c  oid.c  sha256.c  sha512.c  sha512.h  timing.c  timing.h
components/src/utility/thfactory/: thfactory.c
components/src/xml/: ezxml.c
examples/template_app_bulb/: CMakeLists.txt  Kconfig  Makefile  README  bulb_app  bulb_business.c  bulb_led_ctrl.c  bulb_led_drv_pwm.c  bulb_main.c  bulb_protocol_tsl_parse.c  sdkconfig
examples/template_app_bulb/app_compiler_config/: CMakeListslinux.txt  Makefile  Makefile.02d  Makefile.32e  partitions.csv.32e  sdkconfig  sdkconfig.32e  sdkconfig.defaults  sdkconfig.solo
examples/template_app_bulb/include/: bulb_business.h  bulb_led_ctrl.h  bulb_led_drv_pwm.h  bulb_protocol_tsl_parse.h
examples/template_app_bulb/main/: CMakeLists.txt  ap_distribution.c  component.mk  component.mk.02d  component.mk.32e  dev_netmgr.c  ez_app_main.c  ezcloud_ota.c  register_server.c  uart_events.c
examples/template_app_bulb/main/bulb/: bulb_business.c  bulb_config_implement.c  bulb_led_ctrl.c  bulb_led_drv_pwm.c  bulb_protocol_tsl_parse.c
examples/template_app_bulb/main/config/: config_implement.c  dev_info.c  dev_init.c  product_config.c
examples/template_app_bulb/main/include/: ap_distribution.h  config_implement.h  config_type.h  dev_info.h  dev_init.h  dev_netmgr.h  ezcloud_ota.h  product_config.h  register_server.h  ts_imp.h
examples/template_app_bulb/main/lan_net_ctrl/: lanProto.h  net_ctrl_tcp.c  net_ctrl_tcp.h
examples/template_app_bulb/main/product_test/: product_test.c  product_test.h  pt_light_mode.c  pt_light_mode.h
eziot/core/link/: CMakeLists.txt  access_domain_bus.c  access_domain_bus.h  ase_support.c  ase_support.h  das_transport.c  das_transport.h  dev_protocol_def.h  ezdev_ecdh_support.c  ezdev_ecdh_support.h  ezdev_sdk_kerne_queuel.c  ezdev_sdk_kerne_queuel.h  ezdev_sdk_kernel.c  ezdev_sdk_kernel_access.c  ezdev_sdk_kernel_access.h  ezdev_sdk_kernel_common.c  ezdev_sdk_kernel_common.h  ezdev_sdk_kernel_event.c  ezdev_sdk_kernel_event.h  ezdev_sdk_kernel_ex.c  ezdev_sdk_kernel_ex.h  ezdev_sdk_kernel_extend.c  ezdev_sdk_kernel_extend.h  ezdev_sdk_kernel_inner.c  ezdev_sdk_kernel_inner.h  ezdev_sdk_kernel_platform.c  ezdev_sdk_kernel_platform.h  ezdev_sdk_kernel_risk_control.c  ezdev_sdk_kernel_risk_control.h  ezdev_sdk_kernel_xml_parser.c  ezdev_sdk_kernel_xml_parser.h  json_parser.c  json_parser.h  lbs_transport.c  lbs_transport.h  mkernel_internal_error.h  sdk_kernel_def.c  sdk_kernel_def.h  utils.c  utils.h
eziot/core/src/: CMakeLists.txt  access_domain_bus.c  ase_support.c  ase_support.h  das_transport.c  das_transport.h  dev_protocol_def.h  ez_sdk_api.c  ez_sdk_config.c  ezdev_ecdh_support.c  ezdev_ecdh_support.h  ezdev_sdk_kerne_queuel.c  ezdev_sdk_kerne_queuel.h  ezdev_sdk_kernel.c  ezdev_sdk_kernel.h  ezdev_sdk_kernel_access.c  ezdev_sdk_kernel_access.h  ezdev_sdk_kernel_common.h  ezdev_sdk_kernel_event.c  ezdev_sdk_kernel_event.h  ezdev_sdk_kernel_ex.c  ezdev_sdk_kernel_ex.h  ezdev_sdk_kernel_extend.c  ezdev_sdk_kernel_extend.h  ezdev_sdk_kernel_inner.c  ezdev_sdk_kernel_platform.c  ezdev_sdk_kernel_platform.h  ezdev_sdk_kernel_risk_control.c  ezdev_sdk_kernel_risk_control.h  ezdev_sdk_kernel_struct.h  ezdev_sdk_kernel_xml_parser.h  json_parser.c  lbs_transport.c  lbs_transport.h  mkernel_internal_error.h  net_module.c  net_module.h  sdk_kernel_def.c  sdk_kernel_def.h  utils.c  (+1 more)
eziot/core/src/access/: ezdev_sdk_kernel_risk_control.h
eziot/core/src/dispatcher/: access_domain_bus.h  ezdev_sdk_kernel_event.c  ezdev_sdk_kernel_event.h  ezdev_sdk_kernel_extend.c  ezdev_sdk_kernel_extend.h  ezdev_sdk_kernel_queue.c  ezdev_sdk_kernel_queue.h
eziot/core/src/interface/: ez_iot.c  ez_iot_ctx.c  ez_iot_ctx.h  ez_iot_lowlvl.c
eziot/core/src/kernel/: access_domain_bus.c  access_domain_bus.h  ase_support.c  ase_support.h  das_transport.c  das_transport.h  dev_protocol_def.h  ezdev_ecdh_support.c  ezdev_ecdh_support.h  ezdev_sdk_kerne_queuel.c  ezdev_sdk_kerne_queuel.h  ezdev_sdk_kernel.c  ezdev_sdk_kernel.h  utils.c  (+26 more)
platform/src/: CMakeLists.txt
platform/src/freertos/: sem_platform.c  time_platform.c
platform/src/linux/: network_platform.c  sem_platform.c  time_platform.c
platform/src/win/: network_platform.c  thread_platform.c  time_platform.c
tests/test_ezxml/: CMakeLists.txt  README.md  test_xml.c  testxml.xml
tests/unitTest_fota/: CMakeLists.txt  ToolChain.cmake  localcfg.cc  localcfg.h  unittest_entry.cc  unittest_ezpatch.cc  utils.cc  utils.h
tests/unitTest_fota/resources/: app_patch.img  config
unit_test/port/linux/: CMakeLists.txt  kv_imp.c  kv_imp.h  ut_entry.c
(+923 files in other folders)
